Fix single product alignment

--- a/src/scss/woocommerce/pages/_single-product.scss
+++ b/src/scss/woocommerce/pages/_single-product.scss
@@ -37,6 +37,11 @@
       margin-left: auto;
     }
   }
+  
+  .novablocks-content > .product {
+    --block-content-start: ws !important;
+    --block-content-end: we !important;
+  }
 }
 
 .woocommerce-product-gallery__wrapper {
